<resources>
    <!-- Generic stuff -->
    <string name="data_loading">Loading data…</string>
    <string name="error_load">Failed to load data</string>
    <string name="action_later">Later</string>
    <!-- Gas game -->
    <string name="submit_text">Submit</string>

    <string name="app_name">CATmistry</string>
    <string name="appbar_settings">Settings</string>
    <string name="title_learn">Learn</string>
    <string name="learn_header">Learn</string>
    <string name="gas_tests">Gas Tests</string>
    <string name="separation_methods">Separation Methods</string>
    <string name="ph_indicators">pH and Indicators</string>
    <string name="periodic_table">Periodic Table</string>
    <string name="title_play">Play</string>
    <string name="play_header">Play</string>
    <string name="find_gas">Find the Right Gas</string>
    <string name="retrieve_solid">Retrieve the Solids</string>
    <string name="adj_ph">Adjust the pH</string>
    <string name="identify_elem">Identify the Elements</string>

    <!-- Learn quiz page -->
    <string name="gameTimer_desc">Remaining time for question:</string>
    <string name="quiz_data_loading">Please wait for the quiz to be loaded…</string>
    <string name="opt_err">Could not retrieve option</string>
    <string name="end_quiz_title">End Quiz?</string>
    <string name="end_quiz_body">By ending the quiz, all progress will be lost</string>
    <string name="end_quiz_ok">End Quiz</string>
    <string name="end_quiz_no">Continue Quiz</string>
    <!-- Correct/wrong texts -->
    <string name="quiz_result_correct">Well done! You got it right!</string>
    <string name="quiz_remaining_singular">is 1 question</string>
    <string name="quiz_remaining_plural">are %1$s questions</string>
    <string name="quiz_result_wrong">Oh no! You answer was wrong, but don\'t worry! There %1$s left in this quiz.</string>
    <string name="correct_ans_wrong">Correct answer: %1$s\nTry harder next time!</string>
    <string name="correct_ans_correct">There %1$s remaining. Keep up the good work!</string>
    <string name="next_qn_btn">Next question</string>
    <!-- End of quiz strings -->
    <string name="endOfQuiz">The quiz has come to an end, and you got %1$s questions correct!</string>
    <string name="quiz_pass">You\'ve passed the quiz with flying colors! Excellent! You can now proceed to the next activity!</string>
    <string name="quiz_fail">Unfortunately, you\'ve failed the quiz. Read up on the learning topics and reattempt the quiz! You can do it!</string>
    <string name="quiz_exit_btn">Exit</string>

    <!-- Game page -->
    <string name="start_game">Start</string>
    <string name="go_back">Go Back</string>
    <string name="end_game">End game</string>
    <string name="end_game_header">End Game?</string>
    <string name="end_game_content">All progress will be lost, and you\'ll be brought back to the start page of this game</string>
    <string name="cont_game">Continue game</string>
    <string name="select_difficulty">Select level difficulty</string>
    <string name="game_correct">You\'ve got it correct! Keep up the good work! There %1$s remaining.</string>
    <string name="game_wrong">Whoops, that\'s the wrong answer. Keep trying! There %1$s remaining.</string>
    <!-- Separation methods game -->
    <string name="choose_sep_substance">Choose a substance above first</string>
    <string name="sep_method_instruction">Read the description below and click on the substances to choose a separation method.</string>
    <string name="sep_substance_template">Separation method for %1$s</string>
    <string name="sep_game_correct">That\'s the correct answer!</string>
    <!-- pH game -->
    <string name="ph_uni_indicator">Universal Indicator</string>
    <string name="beaker_ph">Beaker pH: %1$s</string>
    <string name="sub_ph_hint">pH of selected substance: %1$s</string>
    <string name="ph_wrong">Whoops! That\'s the wrong answer. Try harder next time!</string>
    <string name="ph_correct">You got it right! Great job!</string>
    <!-- pH table game -->
    <string name="pTable_sub_grp">Substance Group:</string>
    <string name="pTable_sub_type">Substance Type:</string>
    <string name="pTable_grp1">1</string>
    <string name="pTable_grp2">2</string>
    <string name="pTable_grp3">3</string>
    <string name="pTable_grp4">4</string>
    <string name="pTable_sub_metal">Metal</string>
    <string name="pTable_sub_tranMetal">Transition Metal</string>
    <string name="pTable_sub_nonMetal">Non-Metal</string>

    <!-- Game result page -->
    <string name="game_end_back">Go home</string>
    <string name="game_won">Congratulations! You have won the game! Good job!</string>
    <string name="game_lost">You have lost the game, but don\'t be discouraged. Revise the learning topics and reattempt this game!</string>
    <string name="game_end_confetti">Give me confetti!</string>

    <!-- pH slider -->
    <string name="slider_start">pH 1</string>
    <string name="slider_end">pH 14</string>
    <string name="pH_currentDesc">Current pH: %1$s\n%2$s</string>

    <!-- Music player -->
    <string name="music_header">Music</string>
    <string name="music_nav_title">Music</string>
    <string name="duration_placeholder">--:--</string>
    <string name="duration_template">%1$s:%2$s</string>
    <string name="repeat">Repeat</string>
    <string name="stop_description">Stop music</string>
    <string name="play_control">Play/pause music</string>
    <string name="song_select_hint">Song List</string>
    <string name="no_playing_song">No song playing</string>

    <!-- Settings page -->
    <string name="settings_header">Settings</string>
    <string name="appearance_header">App Appearance</string>
    <string name="stats_header">Statistics</string>
    <string name="quiz_stats">Quiz attempts: 0</string>
    <string name="game_stats">Game attempts: 0</string>
    <string name="reset_stats">Reset all statistics</string>
    <string name="accessibility_header">Accessibility</string>
    <string name="dyslexia_font">Dyslexia Font</string>
    <string name="low_movement_mode">Reduce Motion</string>
    <string name="low_movement_desc">Removes confetti, animations and other movement</string>
    <string name="credits_header">Credits and Others</string>
    <string name="credits_team">Programmed by Vincent Kwok</string>
    <string name="credits_team_subtitle">
        With graphics and design by The CATmistry Team:\nNeo Hao Jun\nWang Zerui\nChanel Tan\nRyu Hwina
    </string>
    <string name="share_app">Share CATmistry with others!</string>
    <string name="share_app_text">Check out CATmistry on the Galaxy Store now!</string>
    <!-- Update section -->
    <string name="update_ver">App Version and Update</string>
    <string name="settings_app_ver">App version: %1$s (%2$d)</string>
    <string name="no_app_update">Latest version installed</string>
    <string name="app_update_new">Update to version %1$S available!</string>
    <string name="update_summary">Updating ensures you get the best experience with latest features and bugfixes.</string>
    <string name="update_action">Update</string>

    <!-- DevTools -->
    <string name="devtools_header">CATmistry DevTools</string>
    <string name="devtools_pwd_title">Developer Tools</string>
    <string name="devtools_pwd_hash">$s0$d1018$p6P2LLlgYKhAxKGRP58VDg==$rbGYifk0oLWaF/FRMhjGPniKsMhghnOBST7QW5fuKyU=</string>
    <string name="calc_hash">Calculating hash, please wait for up to 1 minute.</string>
    <string name="devtools_pwd_no">Wrong password</string>
    <string name="devtools_pwd_yes">Opening DevTools…</string>
    <string name="devtools_content">If you\'re unsure why this dialog appeared, press Cancel.</string>
    <string name="devtools_pwd_label">Password</string>
</resources>