<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/appearance_header">
        <ListPreference
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:defaultValue="false"
            android:entries="@array/theme_entries"
            android:entryValues="@array/theme_values"
            app:key="theme"
            app:title="Theme"
            app:useSimpleSummaryProvider="true"
            app:icon="@drawable/ic_round_theme_24" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/stats_header">

        <Preference
            app:icon="@drawable/ic_round_library_books_24"
            app:title="@string/quiz_stats" />

        <Preference
            app:icon="@drawable/ic_baseline_videogame_asset_24"
            app:title="@string/game_stats" />

        <Preference
            app:icon="@drawable/ic_round_refresh_24"
            app:title="@string/reset_stats" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/accessibility_header">

        <SwitchPreferenceCompat
            app:key="dyslexiaFont"
            app:defaultValue="false"
            app:icon="@drawable/ic_round_font_download_24"
            app:title="@string/dyslexia_font" />

        <SwitchPreferenceCompat
            app:key="noMove"
            app:defaultValue="false"
            app:icon="@drawable/ic_round_remove_circle_24"
            app:title="@string/low_movement_mode"
            app:summary="@string/low_movement_desc" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/credits_header">

        <Preference
            app:icon="@drawable/ic_round_info_24"
            app:title="@string/credits_team"
            app:summary="@string/credits_team_subtitle" />

    </PreferenceCategory>

    <PreferenceCategory>

        <Preference
            app:key="shareApp"
            app:icon="@drawable/ic_round_share_24"
            app:title="@string/share_app" />

    </PreferenceCategory>

</PreferenceScreen>