<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartGameActivity">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:background="?attr/gameTopBg"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:gravity="center_horizontal|bottom"
            android:layout_height="wrap_content">

            <com.catmistry.android.SquareImageView
                android:id="@+id/gameBottomImg"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:background="?attr/gameMidBg"
            android:layout_width="match_parent"
            android:layout_height="25dp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:background="?attr/gameEndBg"
            android:layout_width="match_parent"
            android:layout_height="65dp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.core.widget.NestedScrollView
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="50dp"
            android:orientation="vertical"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="12dp"
                app:cardCornerRadius="7dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/gameIntro"
                    android:padding="16dp"
                    android:textAppearance="?attr/textAppearanceBody1" />

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textview.MaterialTextView
                android:text="@string/select_difficulty"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="10dp"
                android:textAppearance="?attr/textAppearanceBody1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.slider.Slider
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:valueFrom="0.0"
                android:valueTo="4.0"
                android:stepSize="1.0"  />

            <Button
                android:id="@+id/startGame"
                android:layout_width="match_parent"
                android:layout_marginStart="50dp"
                android:layout_marginEnd="50dp"
                android:layout_height="wrap_content"
                android:text="@string/start_game" />

            <Button
                android:id="@+id/goBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/go_back"
                style="@style/Widget.MaterialComponents.Button.TextButton" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>